# deadstones

./: .gitignore  .npmignore  .travis.yml  Cargo.toml  README.md  helper.js  main.js  package-lock.json  package.json  pseudoBoard.js
js/: main.js  main.mjs  wasm.js  wasm.mjs
nodejs/: index.js
src/: data.rs  deadstones.rs  lib.rs  main.js  pseudo_board.rs  rand.rs  vertex.rs
tests/: data.js  getFloatingStones.js  getFloatingStones.test.js  getProbabilityMap.test.js  guess.test.js  playTillEnd.test.js
