[package]
name = "deadstones"
version = "2.1.1"
authors = ["Yichuan Shen <shen.yichuan@gmail.com>"]
description = "Simple Monte Carlo algorithm to determine dead stones on a Go board."
license = "MIT"
repository = "https://github.com/SabakiHQ/deadstones"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.48"

[profile.release]
lto = true
opt-level = 3
